[package]
name = "PollutionTracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
argon2 = "0.5.3"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version =  "0.4.42", features= ["serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
solana-client = "3.1.2"
solana-sdk = "3.0.0"